Découpage des composants + installation de Sass
npm install sass
Renommer fichier App.css par App.scss
Découpage des composants
Fichier sass par dossier

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+@import 'components/header/header.modules.scss';
+@import 'components/footer/footer.modules.scss';
+
+
 .App {
   text-align: center;
 }
