--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,66 @@
-h1 {
-  color: red;
+@charset "UTF-8";
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.nav {
+  display: flex;
+}
+
+.nav a {
+  text-decoration: none; /* Supprimer le soulignement */
+  margin-left: 20px; /* Ajouter un espace entre les liens*/
+}
+
+.nav__link--active {
+  text-decoration: none; /* Supprimer le soulignement par défaut */
+  border-bottom: 2px solid black; /* Ajouter un trait noir en dessous du lien */
+}
+
+.banner {
+  position: relative;
+  max-width: 100%;
+  margin: 0px 100px 45px 100px;
+  height: 223px;
+  border-radius: 25px;
+}
+@media all and (max-width: 768px) {
+  .banner {
+    margin: 0px 20px 30px 20px;
+    height: 111px;
+  }
+}
+.banner img {
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+  object-fit: cover;
+  mix-blend-mode: darken;
+  filter: brightness(0.6);
+}
+.banner p {
+  width: 100%;
+  z-index: 1;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 48px;
+  font-weight: 700;
+  color: white;
+}
+@media all and (max-width: 768px) {
+  .banner p {
+    font-size: 24px;
+    text-align: start;
+    margin-left: 10px;
+    width: 80%;
+    left: 40%;
+  }
 }
 
 #footer {
