--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,6 @@
 @import '../components/Header/_header';
 @import '../components/Banner/_banner';
+@import '../components/Card/_card';
+@import '../components/Collapse/_collapse';
+@import '../pages/Error/_error';
 @import '../components/Footer/_footer';
