--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -3,6 +3,7 @@ header {
   justify-content: space-between;
   align-items: center; 
   padding: 10px 20px; 
+  margin: 0px 100px 45px 100px;
 }
 
 .nav {
