Faire page Housing
Création du composant Carrousel et du composant Stars et HousingInformation
Réaliser la page Housing.jsx
Modification du css

--- a/src/components/Collapse/_collapse.scss
+++ b/src/components/Collapse/_collapse.scss
@@ -1,11 +1,15 @@
 .collapse {
     border: none;
     margin-bottom: 20px;
-    margin: 0px 100px 45px 100px;
+    margin-right:auto;
+    margin-left:auto;
+    max-width: 1220px;
   
     .collapse-header {
       background-color: #FF6060;
-      color: purple;
+     font-weight: bold;
+     color: white;
+     font-size: 23px;
       border-radius: 5px;
       padding: 10px;
       display: flex;
