--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,5 +2,8 @@
 @import '../components/Banner/_banner';
 @import '../components/Card/_card';
 @import '../components/Collapse/_collapse';
+@import '../components/Carrousel/carrousel';
+@import '../components/Stars/_stars';
+@import '../components/HousingInformation/housinginformation';
 @import '../pages/Error/_error';
 @import '../components/Footer/_footer';
