--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -1,7 +1,10 @@
 .banner {
     position: relative;
     max-width: 100%;
-    margin: 0px 100px 45px 100px;
+    margin-right:auto;
+    margin-bottom: 35px;
+    margin-left:auto;
+    max-width: 1220px;
     height: 223px;
     border-radius: 25px;
     @media all and (max-width: 768px){
@@ -21,7 +24,7 @@
         z-index: 1;
         text-align: center;
         position: absolute;
-        top: 50%;
+        top: 35%;
         left: 50%;
         transform: translate(-50%, -50%);
         font-size: 48px;
@@ -32,7 +35,8 @@
             text-align: start;
             margin-left: 10px;
             width: 80%;
-            left: 40%;
+            left: 52%;
+            top:25%;
         }
     }
 }
