--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -5,28 +5,37 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    margin-right:auto;
+margin-left:auto;
+max-width: 1220px;
 
 }
 
 .card {
-    width: 300px;
-    height: 300px;
+    width: 340px; 
+    height: 340px; 
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0,0,0,.15);
     color: #fff;
     overflow: hidden;
     position: relative;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
+   
+    
+
 }
 
 .cardsPosition{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+    margin-right:auto;
+    margin-left:auto;
+    max-width: 1220px;
+  
     background: #F6F6F6;
     border-radius: 15px;
-    justify-content: space-between;
     margin-top: 45px;
     padding-bottom: 30px;
 }
@@ -56,4 +65,12 @@
     position: absolute;
     top: 0;
     width: 100%;
+}
+
+
+@media (max-width: 768px)
+{
+.cardsPosition{
+    justify-content: center;
+}
 }
