--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,30 +1,65 @@
-@charset "UTF-8";
-header {
+.header {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
   align-items: center;
-  padding: 10px 20px;
-  margin: 0px 100px 45px 100px;
+  color: #FF6060;
+  padding: 50px 100px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1220px;
 }
-
-.nav {
+@media (max-width: 767px) {
+  .header {
+    padding: 20px;
+  }
+}
+.header_logo {
+  margin-right: auto;
+  width: 210px;
+  height: 68px;
+}
+@media (max-width: 767px) {
+  .header_logo {
+    width: 145px;
+    height: 47px;
+  }
+}
+.header_link {
   display: flex;
+  gap: 50px;
 }
-
-.nav a {
-  text-decoration: none; 
-  margin-left: 20px; 
+@media (max-width: 767px) {
+  .header_link {
+    gap: 25px;
+  }
 }
-
-.nav__link--active {
+.header_link a {
+  font-size: 24px;
+  color: black;
+  border-bottom: none;
+  text-transform: uppercase;
+  position: relative;
   text-decoration: none;
-  border-bottom: 2px solid black; 
+}
+@media (max-width: 767px) {
+  .header_link a {
+    font-size: 12px;
+  }
+}
+.header_link a:hover {
+  color: #FF6060;
+}
+.header_link a.active {
+  border-bottom: 2px solid black;
 }
 
 .banner {
   position: relative;
   max-width: 100%;
-  margin: 0px 100px 45px 100px;
+  margin-right: auto;
+  margin-bottom: 35px;
+  margin-left: auto;
+  max-width: 1220px;
   height: 223px;
   border-radius: 25px;
 }
@@ -38,7 +73,8 @@ header {
   width: 100%;
   height: 100%;
   border-radius: 25px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   mix-blend-mode: darken;
   filter: brightness(0.6);
 }
@@ -47,7 +83,7 @@ header {
   z-index: 1;
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 48px;
@@ -60,7 +96,8 @@ header {
     text-align: start;
     margin-left: 10px;
     width: 80%;
-    left: 40%;
+    left: 52%;
+    top: 25%;
   }
 }
 
@@ -70,28 +107,34 @@ header {
   border-radius: 15px;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1220px;
 }
 
 .card {
-  width: 300px;
-  height: 300px;
+  width: 340px;
+  height: 340px;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   color: #fff;
   overflow: hidden;
   position: relative;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
 .cardsPosition {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1220px;
   background: #F6F6F6;
   border-radius: 15px;
-  justify-content: space-between;
   margin-top: 45px;
   padding-bottom: 30px;
 }
@@ -123,14 +166,23 @@ header {
   width: 100%;
 }
 
+@media (max-width: 768px) {
+  .cardsPosition {
+    justify-content: center;
+  }
+}
 .collapse {
-  border: 1px solid #ccc;
+  border: none;
   margin-bottom: 20px;
-  margin: 0px 100px 45px 100px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1220px;
 }
 .collapse .collapse-header {
   background-color: #FF6060;
+  font-weight: bold;
   color: white;
+  font-size: 23px;
   border-radius: 5px;
   padding: 10px;
   display: flex;
@@ -142,6 +194,240 @@ header {
   padding: 10px;
 }
 
+.carousel-container {
+  position: relative;
+  height: 0;
+  padding-bottom: 25%;
+  overflow: hidden;
+  border-radius: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1220px;
+}
+
+.carousel-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.carousel-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
+}
+
+.carousel-button.prev {
+  left: 0;
+}
+
+.carousel-button.next {
+  right: 0;
+}
+
+.counterContainer {
+  z-index: 3;
+  position: absolute;
+  color: white;
+  font-size: 18px;
+  font-family: Montserrat;
+  left: 50%;
+  bottom: 20px;
+}
+
+@media (max-width: 768px) {
+  .carousel-container {
+    padding-bottom: 60%;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+}
+.stars {
+  white-space: nowrap;
+}
+
+@media (max-width: 768px) {
+  .stars {
+    float: left;
+  }
+  .star {
+    width: 18px;
+    height: 18px;
+  }
+}
+#TitreAppart {
+  color: #FF6060;
+  font-size: 36px;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+
+.tag {
+  display: inline-block;
+  border-radius: 50px;
+  background-color: #FF6060;
+  color: white;
+  width: 140px;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 0;
+  margin-left: 0;
+  margin-right: 10px;
+  text-align: center;
+}
+
+ul {
+  padding: 0;
+}
+
+.InfosContainer {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1220px;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.picture {
+  border-radius: 50px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 80px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+}
+
+.location {
+  color: black;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0;
+}
+
+.name {
+  color: #FF6060;
+  font-size: 18px;
+  font-weight: 500;
+  margin-right: 5px;
+  text-align: right;
+  width: 93px;
+}
+
+.equipements {
+  display: flex;
+  flex-direction: column;
+}
+
+.equipement {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.collapses {
+  display: flex;
+  margin-top: 20px;
+  gap: 80px;
+}
+
+.collapseleft {
+  width: 100%;
+}
+
+.collapseright {
+  width: 100%;
+}
+
+.DataContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.NameContainer {
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.names {
+  display: flex;
+  flex-direction: row;
+  margin-right: auto;
+  align-items: center;
+}
+
+.left {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
+
+@media (max-width: 768px) {
+  #TitreAppart {
+    font-size: 18px;
+  }
+  .location {
+    font-size: 14px;
+    margin-top: 10px;
+  }
+  .InfosContainer {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .DataContainer {
+    flex-direction: column;
+  }
+  .NameContainer {
+    flex-direction: row-reverse;
+    margin-left: 0;
+    width: 100%;
+    align-items: center;
+  }
+  .names {
+    float: right;
+    margin-left: auto;
+    margin-right: 0;
+  }
+  .collapses {
+    flex-direction: column;
+    gap: 0;
+  }
+  .collapseleft {
+    width: 100%;
+  }
+  .collapseright {
+    width: 100%;
+  }
+  .name {
+    font-size: 12px;
+    width: 60px;
+  }
+  .tag {
+    margin-top: 10px;
+    font-size: 10px;
+    width: 100px;
+    height: 18px;
+  }
+  .picture {
+    width: 32px;
+    height: 32px;
+  }
+  .NameContainer {
+    margin-top: 10px;
+  }
+  .equipement {
+    font-size: 10px;
+  }
+}
 .error {
   display: flex;
   flex-direction: column;
@@ -201,6 +487,4 @@ header {
   width: 122px;
   margin: 0 auto;
   margin-bottom: 30px;
-}
-
-/*# sourceMappingURL=App.css.map */
+}/*# sourceMappingURL=App.css.map */
