--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -2,22 +2,23 @@
     position: relative;
     max-width: 100%;
     margin-right:auto;
-    margin-bottom: 35px;
+    margin-bottom: 25px;
+    margin-top: 5px;
     margin-left:auto;
     max-width: 1220px;
     height: 223px;
     border-radius: 25px;
     @media all and (max-width: 768px){
-        margin: 0px 20px 30px 20px;
+        margin: 0px 5px 10px 5px;
         height: 111px;
     }
     img {
         width: 100%;
         height: 100%;
-        border-radius: 25px;
+        border-radius: 15px;
         object-fit: cover;
         mix-blend-mode: darken;
-        filter: brightness(.6);
+        filter: brightness(0.7);
     }
     & p {
         width: 100%;
@@ -32,10 +33,10 @@
         color: white;
         @media all and (max-width: 768px){
             font-size: 24px;
+            font-weight: 500;
             text-align: start;
-            margin-left: 10px;
             width: 80%;
-            left: 52%;
+            left: 45%;
             top:25%;
         }
     }
