--- a/src/components/HousingInformation/_housinginformation.scss
+++ b/src/components/HousingInformation/_housinginformation.scss
@@ -6,11 +6,11 @@
   }
 
 .tag{
-    display: inline-block; 
-
-  border-radius: 50px;
+  display: inline-block; 
+  border-radius: 25px;
   background-color: #FF6060;
   color: white;
+  width: max-content; 
   width: 140px;
   font-size: 14px;
   font-weight: 500;
@@ -171,6 +171,7 @@ flex-direction: column;
     font-size: 10px;
     width: 100px;
     height: 18px;
+    line-height: 17px;
   }
   
   .picture{
