--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,7 +8,7 @@
   margin-left: auto;
   max-width: 1220px;
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .header {
     padding: 20px;
   }
@@ -18,7 +18,7 @@
   width: 210px;
   height: 68px;
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .header_logo {
     width: 145px;
     height: 47px;
@@ -28,7 +28,7 @@
   display: flex;
   gap: 50px;
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .header_link {
     gap: 25px;
   }
@@ -37,13 +37,13 @@
   font-size: 24px;
   color: black;
   border-bottom: none;
-  text-transform: uppercase;
   position: relative;
   text-decoration: none;
 }
 @media (max-width: 767px) {
   .header_link a {
     font-size: 12px;
+    text-transform: uppercase;
   }
 }
 .header_link a:hover {
@@ -57,7 +57,8 @@
   position: relative;
   max-width: 100%;
   margin-right: auto;
-  margin-bottom: 35px;
+  margin-bottom: 25px;
+  margin-top: 5px;
   margin-left: auto;
   max-width: 1220px;
   height: 223px;
@@ -65,18 +66,18 @@
 }
 @media all and (max-width: 768px) {
   .banner {
-    margin: 0px 20px 30px 20px;
+    margin: 0px 5px 10px 5px;
     height: 111px;
   }
 }
 .banner img {
   width: 100%;
   height: 100%;
-  border-radius: 25px;
+  border-radius: 15px;
   -o-object-fit: cover;
      object-fit: cover;
   mix-blend-mode: darken;
-  filter: brightness(0.6);
+  filter: brightness(0.7);
 }
 .banner p {
   width: 100%;
@@ -93,10 +94,10 @@
 @media all and (max-width: 768px) {
   .banner p {
     font-size: 24px;
+    font-weight: 500;
     text-align: start;
-    margin-left: 10px;
     width: 80%;
-    left: 52%;
+    left: 45%;
     top: 25%;
   }
 }
@@ -130,13 +131,13 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 30px;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0 auto;
   max-width: 1220px;
   background: #F6F6F6;
   border-radius: 15px;
-  margin-top: 45px;
+  margin-top: 40px;
   padding-bottom: 30px;
+  padding-top: 30px;
 }
 
 .title_card {
@@ -166,9 +167,12 @@
   width: 100%;
 }
 
-@media (max-width: 768px) {
+@media all and (max-width: 768px) {
   .cardsPosition {
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 0;
   }
 }
 .collapse {
@@ -176,7 +180,7 @@
   margin-bottom: 20px;
   margin-right: auto;
   margin-left: auto;
-  max-width: 1220px;
+  max-width: 1020px;
 }
 .collapse .collapse-header {
   background-color: #FF6060;
@@ -190,8 +194,14 @@
   align-items: center;
   cursor: pointer;
 }
+@media (max-width: 768px) {
+  .collapse .collapse-header {
+    font-size: 14px;
+  }
+}
 .collapse .collapse-content {
-  padding: 10px;
+  padding: 20px;
+  background-color: #f6f6f6;
 }
 
 .carousel-container {
@@ -275,9 +285,11 @@
 
 .tag {
   display: inline-block;
-  border-radius: 50px;
+  border-radius: 25px;
   background-color: #FF6060;
   color: white;
+  width: -moz-max-content;
+  width: max-content;
   width: 140px;
   font-size: 14px;
   font-weight: 500;
@@ -416,6 +428,7 @@ ul {
     font-size: 10px;
     width: 100px;
     height: 18px;
+    line-height: 17px;
   }
   .picture {
     width: 32px;
