--- a/src/pages/Error/_error.scss
+++ b/src/pages/Error/_error.scss
@@ -12,6 +12,7 @@
         font-size: 288px;
         font-weight: 700;
         color: #ff6060;
+        margin: 0;
 
         @media (max-width: 768px) {
             font-size: 96px;
