--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -454,6 +454,7 @@ ul {
   font-size: 288px;
   font-weight: 700;
   color: #ff6060;
+  margin: 0;
 }
 @media (max-width: 768px) {
   .error_title {
