--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -9,6 +9,9 @@
     font-weight: 500;
     height:209px;
     margin-top: 20px;
+    @media (max-width: 768px) {
+      font-size: 14px;
+    }
   };
 
 .logo{
