--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -496,6 +496,11 @@ ul {
   height: 209px;
   margin-top: 20px;
 }
+@media (max-width: 768px) {
+  #footer {
+    font-size: 14px;
+  }
+}
 
 .logo {
   width: 122px;
